crates/runtime/src/value/object/snapshots/mu_runtime__value__object__tests__object-2.snap
---
source: crates/runtime/src/value/object/tests.rs
expression: "format!(\"display:\\n{v}\\n\\ndebug:\\n{v:#?}\")"
---
display:
{"a": 0, "b": 1}

debug:
Dict(
    {
        Str(
            "a",
        ): Value {
            type: "int",
            value: 0,
        },
        Str(
            "b",
        ): Value {
            type: "int",
            value: 1,
        },
    },
)
