crates/runtime/src/value/object/snapshots/mu_runtime__value__object__tests__object.snap
---
source: crates/runtime/src/value/object/tests.rs
expression: "format!(\"display:\\n{v}\")"
---
display:
[0, 1, 2, 3]
