crates/runtime/src/value/object/snapshots/mu_runtime__value__object__tests__object_value.snap
---
source: crates/runtime/src/value/object/tests.rs
expression: "format!(\"display:\\n{v}\\n\\ndebug:\\n{v:#?}\")"
---
display:
[0, 1, 2, 3]

debug:
Value {
    type: "object",
    value: List(
        [
            Value {
                type: "int",
                value: 0,
            },
            Value {
                type: "int",
                value: 1,
            },
            Value {
                type: "int",
                value: 2,
            },
            Value {
                type: "int",
                value: 3,
            },
        ],
    ),
}
